...
    "player_audio": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Audio"
          }
        },
        "tr": {
          "stringUnit": {
            "state": "translated",
            "value": "Ses"
...
